--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">SE SURVEY</string>
     <string name="ip_serv">http://192.168.1.9:3000</string>
 </resources>
